# algorithm-engineering-material-ss2026

.github/workflows/: deploy-slides.yml
homework/HW01/exercise01/: UNIQUEOUTPUT.txt
homework/HW01/exercise02/: exercise2a.md  exercise2b.md  problem_program_a.cpp  problem_program_b.cpp
homework/HW01/exercise03/: exercise03_D.txt
homework/HW01/exercise03/src/tsp_two_opt/: _core.cpp  best_improvement.py  first_improvement.py  full_scan.py
slides/: index.html
slides/T01/: T01-performance-engineering.qmd  _00-intro.qmd  _01-amdahl.qmd  _02-logging.qmd  _03-profiling.qmd  _04-benchmarking.qmd  _05-python-killers.qmd  _06-pybind11.qmd  _07-cpp-killers.qmd  _08-wrap-up.qmd  references.bib  styles.css
slides/T01/assets/: gen_adjlist_vs_csr_memory.py  gen_amdahl.py  gen_aos_soa.py  gen_cpp_killers_summary.py  gen_gbench_adjlist_vs_csr.py  gen_pybind11_benchmark.py  gen_python_killers_summary.py  gen_tracing_vs_sampling.py
slides/T01/examples/cpp_killers/: CMakeLists.txt  README.md
slides/T01/examples/cprofile/: profile_solver.py
slides/T01/examples/google_benchmark/: CMakeLists.txt
slides/T01/examples/google_benchmark/benchmarks/: CMakeLists.txt  bm_graph.cpp
slides/T01/examples/google_benchmark/src/graph/: graph.h
slides/T01/examples/google_benchmark/tests/: CMakeLists.txt
slides/T01/examples/perf_record/: main.cpp
slides/T01/examples/pybind11_template/: README.md
slides/T01/examples/pybind11_template/src/fast_tsp/: _bindings.cpp  tsp.cpp  tsp.h
slides/T01/examples/pybind11_template/tests/: test_correctness.py
slides/T01/examples/python_killers/: benchmark_python_killers.py
slides/T01/examples/timestamp_profiling/: README.md  slow_solver.py
slides/examples/cpp_killers/benchmarks/: bm_cpp_killers.cpp
slides/examples/cprofile/: README.md  profile.prof
slides/examples/google_benchmark/: README.md
slides/examples/google_benchmark/src/: CMakeLists.txt
slides/examples/google_benchmark/src/graph/: graph_gen.h
slides/examples/google_benchmark/tests/: test_graph.cpp
slides/examples/perf_record/: Makefile  README.md
slides/examples/pybind11_template/: CMakeLists.txt  benchmark_python_vs_cpp.py  pyproject.toml
slides/examples/pybind11_template/src/fast_tsp/: __init__.py  _bindings.cpp
slides/examples/pybind11_template/tests/: test_version.py
